adding basic styling for the roof and list elements

--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -8,30 +8,50 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
+    .home-top {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
 
-
-    .roof {
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 0 7em 6em;
-        border-color: transparent transparent #c4c4c4;
+        .roof {
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 7em 6em;
+            border-color: transparent transparent #c4c4c4;
+        }
+    
+        h1 {
+            position: relative;  
+            bottom: 2em;
+            right: .8em;
+            z-index: 1;
+        }
+    
+        h1+p {
+            position: relative;
+            bottom: 4.5em;
+            left: .5em;
+            width: 75%;
+            background-color: #88D467;
+            padding: .5em 0;
+            text-align: center;
+        }
     }
 
-    h1 {
-        position: relative;
-        bottom: 2.8em;
-        z-index: 1;
-    }
+    ul {
+        width: 90%;
+        list-style: none;
 
-    h1+p {
-        width: 75%;
-        position: relative;
-        bottom: 7.7em;
-        left: 1.7em;
-        background-color: #88D467;
-        padding: .5em 0;
-        text-align: center;
+        li {
+            height: 2em;
+            margin-bottom: 1em;
+            border: black solid 1px;
+            border-radius: 1em;
+            text-align: center;
+        }
     }
 
 }
