--- a/client/src/sass/layouts/mobile/_mobile.scss
+++ b/client/src/sass/layouts/mobile/_mobile.scss
@@ -1,2 +1,5 @@
 // Import style components
-@import "./home";
+/* Media Query for Mobile Devices */
+@media (max-width: 480px) {
+    @import "./home";
+}
