--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -18,27 +18,27 @@
             width: 0;
             height: 0;
             border-style: solid;
-            border-width: 0 7em 6em;
+            border-width: 0 7em 4em;
             border-color: transparent transparent $orange;
             margin: 1em 0;
         }
     
         h1 {
             position: absolute;
-            //bottom: 2em;
-            // right: .8em;
+            top: 7em;
+            left: 1.5em;
             z-index: 1;
           
         }
     
         h1+p {
             position: absolute;
-            top: 17em;
+            top: 15.5em;
             left: 5.5em;
-            width: 60%;
+            width: 10em;
             background-color: #88D467;
             opacity: .7;
-            padding: .5em 0;
+            padding: .3em 0;
             text-align: center;
             
         }
