--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -18,27 +18,26 @@
             width: 0;
             height: 0;
             border-style: solid;
-            border-width: 0 7em 4em;
+            border-width: 0 6em 4em;
             border-color: transparent transparent $orange;
             margin: 1em 0;
         }
     
         h1 {
             position: absolute;
-            top: 7em;
-            left: 1.5em;
+            margin-right: 1.5em;
             z-index: 1;
           
         }
     
         h1+p {
             position: absolute;
-            top: 15.5em;
-            left: 5.5em;
+            margin-top: 2.5em;
+            margin-left: 1.2em;
             width: 10em;
-            background-color: #88D467;
+            background-color: $green;
             opacity: .7;
-            padding: .3em 0;
+            padding: .2em 0;
             text-align: center;
             
         }
