--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -44,7 +44,7 @@
     }
 
     ul {
-        width: 14em;
+        width: 12.5em;
         list-style: none;
 
         li {
@@ -59,6 +59,15 @@
                 text-decoration: none;
             }
         }
+    }
+
+    .card-element {
+        width: 70vw;
+        height: auto;
+        border: black solid 1x;
+        @include flex;
+        flex-direction: column;
+        margin: 1em;
     }
 
 }
