changing the settings for the roof and buttons depending the width of the mobile device

--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -18,7 +18,7 @@
             width: 0;
             height: 0;
             border-style: solid;
-            border-width: 0 6em 4em;
+            border-width: 0 40vw 10vh;
             border-color: transparent transparent $orange;
             margin: 1em 0;
         }
@@ -44,7 +44,7 @@
     }
 
     ul {
-        width: 12.5em;
+        width: 75vw;
         list-style: none;
 
         li {
