--- a/client/src/sass/layouts/mobile/_home.scss
+++ b/client/src/sass/layouts/mobile/_home.scss
@@ -1,5 +1,6 @@
-// test styling
+// Home page Mobile setup
 
+// The entire div component setup
 .home {
     width: 100%;
     height: auto;
@@ -7,13 +8,14 @@
     @include flex;
     flex-direction: column;
     
+    // Top div which includes the roof div, h1 and the p tag
     .home-top {
         width: 100vw;
         height: auto;
         @include flex;
         flex-direction: column;
 
-
+        // Roof div
         .roof {
             width: 0;
             height: 0;
@@ -22,14 +24,16 @@
             border-color: transparent transparent $orange;
             margin: 1em 0;
         }
-    
+        
+        // h1 (Casa Verde title)
         h1 {
             position: absolute;
             margin-right: 1.5em;
             z-index: 1;
           
         }
-    
+        
+        // First p tag after h1 (RAUM FÜR IDEEN - Casa Verde Motto)
         h1+p {
             position: absolute;
             margin-top: 2.5em;
@@ -42,11 +46,13 @@
             
         }
     }
-
+    
+    // Ul for the buttons/links
     ul {
         width: 75vw;
         list-style: none;
-
+        
+        // Li setup
         li {
             height: 2em;
             margin-bottom: 1em;
@@ -55,12 +61,14 @@
             border-radius: 1em;
             text-align: center;
            
+            // Links setup
             a {
                 text-decoration: none;
             }
         }
     }
 
+    // Card elements setup
     .card-element {
         width: 75vw;
         height: 50vh;
@@ -71,17 +79,25 @@
         text-align: center;
         border: 2px solid salmon;
         border-radius: 1em;
-
+        
+        // Card image setup
+        img {
+            width: 5em;
+            height: 5em;
+        }
+        
+        // Card button setup
         button {
             width: 35vw;
             height: 8vh;
             border-radius: .5em;
             position: relative;
             left: 3em;
-            top: 1em;
+            
         }
     }
-
+    
+    // Top of the card including the name and logo
     .card-top {
         width: 100%;
         @include flex;
